Landscape Compatibility Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,19 @@
 <resources>
     <string name="app_name">VangtiChai</string>
     <string name="result_title">Result:</string>
+    <string name="reset_title">Reset</string>
+    <string name="calculate_button">Calculate</string>
+    <string name="clear_button">X</string>
+
+    <string name="numeric_1">1</string>
+    <string name="numeric_2">2</string>
+    <string name="numeric_3">3</string>
+    <string name="numeric_4">4</string>
+    <string name="numeric_5">5</string>
+    <string name="numeric_6">6</string>
+    <string name="numeric_7">7</string>
+    <string name="numeric_8">8</string>
+    <string name="numeric_9">9</string>
+    <string name="numeric_0">0</string>
+
 </resources>
